--- a/app/src/main/res/xml/settings.xml
+++ b/app/src/main/res/xml/settings.xml
@@ -63,6 +63,15 @@
             android:summary="@string/pref_summary_use_root"
             />
 
+        <SwitchPreference
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:defaultValue="false"
+            android:key="@string/pref_key_use_accessibility_service"
+            android:title="@string/pref_title_use_accessibility_service"
+            android:summary="@string/pref_summary_use_accessibility_service"
+            />
+
         <ListPreference
             android:key="@string/pref_key_button_backlight"
             android:title="@string/pref_title_button_backlight"
